--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yet Another Pomodoro Timer </title>
+  <title>PowerNap - Energize your day, one nap at a time</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/8e7b84f57c.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
@@ -15,8 +15,8 @@
   <nav>
     <ul class="pomodoro-menu">
       <li><button type="button" class="active" data-mode="pomodoro">Pomodoro</button></li>
-      <li><button type="button" data-mode="shortBreak">Short Break</button></li>
-      <li><button type="button" data-mode="longBreak">Long Break</button></li>
+      <li><button type="button" data-mode="shortBreak">Short Nap</button></li>
+      <li><button type="button" data-mode="longBreak">Long Nap</button></li>
     </ul>
   </nav>
   <div class="pomodoro-container">
